--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "express-generator": "^4.13.4",
     "json2csv": "^3.6.3",
     "moment": "^2.14.1",
-    "node-pid-controller": "^1.0.0"
+    "node-pid-controller": "^1.0.0",
+    "socket.io": "^1.4.8"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "express" : "*",
+    "jade" : "*"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
