--- a/package.json
+++ b/package.json
@@ -17,8 +17,21 @@
     "socket.io": "^1.4.8"
   },
   "devDependencies": {
-    "express" : "*",
-    "jade" : "*"
+    "babel-cli": "^6.14.0",
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-transform-runtime": "^6.12.0",
+    "babel-preset-es2015": "^6.14.0",
+    "css-loader": "^0.24.0",
+    "express": "^4.14.0",
+    "jade": "^1.11.0",
+    "pug": "^2.0.0-beta5",
+    "vue": "^1.0.26",
+    "vue-hot-reload-api": "^2.0.6",
+    "vue-html-loader": "^1.2.3",
+    "vue-loader": "^8.5.2",
+    "vue-style-loader": "^1.0.0",
+    "webpack": "^1.13.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
