--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-runtime": "^6.12.0",
     "babel-preset-es2015": "^6.14.0",
+    "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.24.0",
     "express": "^4.14.0",
     "jade": "^1.11.0",
