--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "cylon-raspi": "^0.20.1",
     "express": "^4.14.0",
     "express-generator": "^4.13.4",
+    "express-ws": "^2.0.0",
     "json2csv": "^3.6.3",
     "moment": "^2.14.1",
     "node-pid-controller": "^1.0.0",
-    "socket.io": "^1.4.8"
+    "socket.io": "^1.4.8",
+    "vue-socket.io": "^1.0.2"
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
@@ -27,6 +29,7 @@
     "express": "^4.14.0",
     "jade": "^1.11.0",
     "pug": "^2.0.0-beta5",
+    "socket.io": "^1.4.8",
     "vue": "^1.0.26",
     "vue-hot-reload-api": "^2.0.6",
     "vue-html-loader": "^1.2.3",
