--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "babel": "^6.5.2",
+    "bower": "^1.7.9",
     "cylon": "^1.3.0",
     "cylon-gpio": "^0.29.0",
     "cylon-i2c": "^0.26.1",
